@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.96 2005/03/31 01:51:06 allanonjl Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.97 2005/03/31 03:53:51 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  30 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Cleanup deactivate() in Users
+
   30 Mar 2005; John N. Laliberte <allanonjl@gentoo.org>
   Users.py is now half integrated into the backend (saving only).
   
